test-data/00-namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: test-netpol-a
  labels:
    kubernetes.io/metadata.name: test-netpol-a
---
apiVersion: v1
kind: Namespace
metadata:
  name: test-netpol-b
  labels:
    kubernetes.io/metadata.name: test-netpol-b
